--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@flaticon/flaticon-uicons": "^2.2.0",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
+    "fontawesome": "^5.6.3",
+    "googlefonts": "^1.1.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
